--- a/estilos.css
+++ b/estilos.css
@@ -101,22 +101,17 @@ header {
 .video-intro {
   position: relative;
   width: 100%;
-  height: 100vh;        /* ocupa toda la pantalla */
+  height: auto;
   overflow: hidden;
-  background: #000;
 }
 
 .video-intro .video-cover {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
+  width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
+  display: block;
 }
+
 
 
 
@@ -163,9 +158,10 @@ header {
 }
 
 .carrusel {
-  overflow: visible;  /* <-- importante para que el realce no corte */
+  overflow: hidden; /* cambia esto */
   width: 90%;
 }
+
 
 .carrusel-inner {
   display: flex;
@@ -281,4 +277,26 @@ footer {
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
+}
+
+
+@media (max-width: 768px) {
+  .carrusel-inner {
+    gap: 10px;
+  }
+
+  .slide {
+    min-width: 220px;
+    height: 300px;
+  }
+
+  .titulo {
+    font-size: 14px;
+    padding: 6px 4px;
+  }
+
+  .flecha {
+    font-size: 24px;
+    padding: 6px 10px;
+  }
 }
